Modificacion del textoa nombres de perros

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <ul>
-      <li>Vagrant</li>
-      <li>Docker</li>
-      <li>Ansible</li>
-      <li>Integración perruna</li>
+      <li>Dalmata</li>
+      <li>Boxer</li>
+      <li>San Bernardo</li>
+      <li>Bull Terrier</li>
     </ul>
   </body>
 </html>
