--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <ul>
       <li>Dalmata</li>
-      <li>Boxer</li>
+      <li>Bull dog</li>
       <li>San Bernardo</li>
       <li>Bull Terrier</li>
     </ul>
