Agregando raza de perro boxer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>Bull dog</li>
       <li>San Bernardo</li>
       <li>Bull Terrier</li>
+      <li>Boxer</li>
     </ul>
   </body>
 </html>
