Corrigiendo el nombre de San Bernardo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li>Dalmata</li>
       <li>Bull dog</li>
-      <li>San Bernardo</li>
+      <li>Pastor Aleman</li>
       <li>Bull Terrier</li>
     </ul>
   </body>
