Modificacion de bull dog a bulldog ingles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <ul>
       <li>Dalmata</li>
-      <li>Bull dog</li>
+      <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
       <li>Bull Terrier</li>
     </ul>
