--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul>
-      <li>Dalmata</li>
+      <li>Dalmata:perro con manchas</li>
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
       <li>Bull Terrier</li>
