Modificando nacionalidad del boxer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
       <li>Bull Terrier</li>
-      <li>Boxer</li>
+      <li>Boxer-peruano</li>
     </ul>
   </body>
 </html>
