Modificacion de nacionalidad de boxer a italiano

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>Bulldog ingles</li>
       <li>San Bernardo</li>
       <li>Bull Terrier</li>
-      <li>Boxer</li>
+      <li>Boxer italiano</li>
     </ul>
   </body>
 </html>
