Cambiando el nombre de bull terrier

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li>Dalmata:perro con manchas</li>
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
-      <li>Bull Terrier</li>
+      <li>Bull Terrier: Mi perro favorito</li>
       <li>Boxer italiano</li>
     </ul>
   </body>
