--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
       <li>Bull Terrier</li>
-      <li>Boxer italiano</li>
+      <li>Boxer italiano: perro de origen italiano</li>
     </ul>
   </body>
 </html>
