--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <li>Dalmata:perro con manchas</li>
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
-      <li>Bull Terrier</li>
-      <li>Boxer italiano: perro de origen italiano</li>
+      <li>Bull Terrier: El mejor perro del mundo es Kimberly</li>
+      <li>Boxer italiano</li>
     </ul>
   </body>
 </html>
