Modificacion en info de la raza dalmata

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul>
-      <li>Dalmata:perro con manchas</li>
+      <li>Dalmata:perro con manchas, cariñoso y amable</li>
       <li>Bulldog ingles</li>
       <li>Pastor Aleman</li>
       <li>Bull Terrier: El mejor perro del mundo es Kimberly</li>
