Agregando la raza de galgo argentino

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li>Pastor Aleman</li>
       <li>Bull Terrier: El mejor perro del mundo es Kimberly</li>
       <li>Boxer italiano</li>
+      <li>Galgo argentino es originario de Buenos Aires</li>
     </ul>
   </body>
 </html>
